[package]
name = "layout-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", default-features = false, features = [
    "rwh_06",
    "wayland",
] }
wgpu = { version = "27.0", default-features = false, features = [
    "vulkan",
    "wgsl",
    "std",
] }
pollster = "0.4"
bytemuck = "1.14"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
